--- a/.env
+++ b/.env
@@ -8,8 +8,8 @@ TOKEN = "GET YOUR OWN TOKEN"
 # After you fill this out, go to main.py and uncomment out the code related to db connections in async def main().
 
 # Database Connectivity-
-# USER = " "
-# PASSWORD = " "
-# HOST = " "
-# PORT =
-# DATABASE_NAME = " "
+# DB_USER = " "
+# DB_PASSWORD = " "
+# DB_HOST = " "
+# DB_PORT =
+# DB_NAME = " "
